[project]
name = "cyber-tweet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "spacy>=3.7.5",
    "symspellpy>=6.7.8",
    "wordcloud>=1.9.3",
]

[dependency-groups]
dev = [
    "pip>=24.3.1",
]
